propellor (5.5.1) UNRELEASED; urgency=medium

  * Some openbsd portability fixes. Thanks, rsiddharth.
  * Added Libvirt module. Thanks, Sean Whitton.

 -- Joey Hess <id@joeyh.name>  Tue, 23 Oct 2018 11:37:16 -0400

propellor (5.5.0) unstable; urgency=medium

  * letsencrypt': Pass --expand to support expanding the list of domains
  * Split mailname property out of Hostname.sane, since bad mailname
    guesses can lead to ugly surprises. (API change)
  * Removed HostingProvider.CloudatCost module as it lacks a maintainer.
    (If anyone would like to maintain it, send a patch adding it back.)
    (API change)
  * Added Systemd.escapePath helper function useful when creating mount
    units.
  * Added Sudo.sudoersDFile property.
  * Sudo.enabledFor: Write to /etc/sudoers.d/000users rather than to
    /etc/sudoers. (Any old lines it wrote to /etc/sudoers will be removed.)
    This fixes a potential ordering problem; the property used to append
    the line to /etc/sudoers, but that would override more specific lines
    in the include directory.
  * Borg: Added UsesEnvVar.
  * Added DiskImage.noBootloader, useful for eg, direct booting with
    qemu. Thanks, David Bremner.
  * Added Apt.backportInstalledMin.

 -- Joey Hess <id@joeyh.name>  Sat, 20 Oct 2018 21:00:27 -0400

propellor (5.4.1) unstable; urgency=medium

  * Modernized and simplified the MetaTypes implementation now that
    compatability with ghc 7 is no longer needed.
  * Use git verify-commit to verify gpg signatures, rather than the old
    method of parsing git log output. Needs git 2.0.
  * Added ConfFile.containsShellSetting, ConfFile.lacksShellSetting,
    and EtcDefault.set properties. Thanks, Sean Whitton
  * Dns: Support TXT values longer than bind's maximum string length
    of 255 bytes. Thanks, rsiddharth.
  * Docker and HostingProvider.CloudAtCost modules are not being
    maintained, so marked them as such.
    Seeking a maintainer for the Docker module; I anticipate